# mt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: FUNDING.yml
.github/workflows/: build_cmake.yml
cmake/: Conan.cmake
ext/: README.txt
src/: CMakeLists.txt
src/base64/: CMakeLists.txt  decode.cpp  decode.h  encode.cpp  encode.h  mask.h
src/digg/: CMakeLists.txt  action.cpp  action.h  event_listener.h  event_processor.cpp  event_processor.h  file_dialog.cpp  file_dialog.h  mainmenubar.cpp  mainmenubar.h  mainwindow.cpp  mainwindow.h  menu.cpp  menu.h  menubar.cpp  menubar.h  menuitem.cpp  menuitem.h  renderable.h  sentry.h  subwindow.cpp  subwindow.h  widget.h
src/mt/: CMakeLists.txt  instrument.cpp  instrument.h  instrument_editor.cpp  instrument_editor.h  instrument_list.cpp  instrument_list.h  instrument_selection_listener.h  keyboard.cpp  keyboard.h  main.cpp  muzaktracker.cpp  muzaktracker.h  note.cpp  note.h  pattern_queue_editor.cpp  pattern_queue_editor.h  pattern_view.cpp  pattern_view.h  project.cpp  project.h  sample.cpp  sample.h  sample_view.cpp  sample_view.h
src/mtlib/: CMakeLists.txt  audio_data_presenter.h  config.cpp  config.h  instrument.cpp  instrument.h  note.cpp  note.h  pattern.cpp  pattern.h  pattern_queue.cpp  pattern_queue.h  project.cpp  project.h  sample.cpp  sample.h  sample_data_iterator.h  wav_file_format.cpp  wav_file_format.h
src/sndmix/: CMakeLists.txt  audiochannel.h  audiomixer.cpp  audiomixer.h  audiostream.cpp  audiostream.h  audiosystem.cpp  audiosystem.h  channel.cpp  channel.h  interpolating_sample_data_iterator.h  mixer.cpp  mixer.h  node.h  sample_data_iterator.h  sinknode.cpp  sinknode.h  sound.cpp  sound.h  soundbuffer.cpp  soundbuffer.h  sourcenode.cpp  sourcenode.h
test/: CMakeLists.txt
test/base64/: CMakeLists.txt  decode_test.cpp  encode_test.cpp
test/digg/: CMakeLists.txt  action_test.cpp  event_processor_test.cpp
test/mtlib/: CMakeLists.txt  note_test.cpp  pattern_queue_test.cpp  pattern_test.cpp  sample_data_iterator_test.cpp  wav_file_format_test.cpp
test/sndmix/: CMakeLists.txt  interpolating_sample_data_iterator_test.cpp  sample_data_iterator_test.cpp  sinknode_test.cpp  sound_test.cpp  soundbuffer_test.cpp
